# cli-skeleton

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.h
cpp_src/: main.cpp  menu.cpp  menu_item.cpp  menu_item.h
gui/: README.md
menu/: menu.cpp  menu.h
menu/account/login/: x.h
menu/data/draw/: x.cpp
py_src/: account_manager.py  main.py  menu_manager.py
py_src/mongodb/: mongodb.py
py_src/scripts/: instagram_seeder.py
src/: README.md  main.cpp  menu.cpp  menu.h  menu_item.cpp  menu_item.h
